--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ img {
 body {
   text-align: center;
   font-family: Calibri;
-  background-color: #e49301;
-  color: S#513705;
+  background-color: #FFFFFF;
+  color: #000000;
   text-size-adjust: 200;
 }
