--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ img {
 body {
   text-align: center;
   font-family: Calibri;
-  background-color: #000000;
-  color: #FFFFFF;
+  color: #000000;
   text-size-adjust: 200;
 }
