--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ body {
   text-align: center;
   font-family: Calibri;
   background-color: #000000;
-  color: #FFFFFF;
+  color: #ADD8E6;
   text-size-adjust: 200;
 }
